# agrilla

./: AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.en.md  README.es.md  README.md  agrilla.wixproj  agrilla.wxs  build-version.cmake  config.h.in  version.h.in
.github/workflows/: build-appimage.yml  build-msi-package.yml  build.yml
docs/: linux-build-instructions.md
include/: DlgAbout.h  DlgAspectRatio.h  DlgGridOptions.h  MainFrame.h  TheApp.h  ToolBar.h
res/: CREDITS.md  agrilla.appdata.xml  agrilla.desktop  com.github.cecilios.agrilla.appdata.xml  credits.md
scripts/: build-agrilla.sh
src/app/: MainFrame.cpp  TheApp.cpp  ToolBar.cpp
src/dialogs/: DlgAbout.cpp  DlgAspectRatio.cpp  DlgGridOptions.cpp
